--- a/chat.html
+++ b/chat.html
@@ -25,14 +25,15 @@
               <div class="heading-avatar-icon">
                 <img src="img/man-2-512.png">
               </div>
+              <div class="text-center">
+                <h2>Mes amis </h2>
+              </div>
             </div>
             <div class="col-sm-1 col-xs-1  heading-dot  pull-right">
               <i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
             </div>
-            <div class="col-sm-2 col-xs-2 heading-compose  pull-right">
-              <i class="fa fa-comments fa-2x  pull-right" aria-hidden="true"></i>
-            </div>
           </div>
+
           <!-- Heading End -->
 
           <!-- SearchBox -->
@@ -500,7 +501,9 @@
           <div class="row message-body">
             <!-- display logo when no friend selected -->
             <div class="Yolo_logo">
-              <img src="img/logo.jpg" alt="image" class="img-responsive center-block" />
+              <img src="img/LOGO_YOLO.png" alt="image" class="img-responsive center-block" />
+            </div>
+            <div class="description_logo">
               <h3 class="text-center">Click on a friend to start a conversation</h3>
             </div>
 
